[package]
name = "ksmm"
version = "0.1.0"
edition = "2024"
authors = ["kalicyh <kalicyh@qq.com>"]
license = "MIT"
description = "KernelSU Module Manager CLI"
repository = "https://github.com/kalicyh/KernelSU_Module_Manager"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["kernelsu", "module", "manager"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
owo-colors = "4.0"
indicatif = "0.17"
dialoguer = "0.11"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
regex = "1.0"
