[package]
name = "ksmm"
version = "0.4.1"
edition = "2024"
authors = ["kalicyh <kalicyh@qq.com>"]
license = "MIT"
description = "KernelSU Module Manager CLI"
repository = "https://github.com/kalicyh/KernelSU_Module_Manager"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["kernelsu", "module", "manager"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
owo-colors = "4.0"
chrono = "0.4"
regex = "1.0"
dialoguer = "0.11"
zip = "0.6"
