[package]
name = "ksmm"
version = "0.4.4"
edition = "2024"
authors = ["kalicyh <kalicyh@qq.com>"]
license = "MIT"
description = "KernelSU Module Manager CLI"
repository = "https://github.com/kalicyh/KernelSU_Module_Manager"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["kernelsu", "module", "manager"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.2"
chrono = "0.4"
regex = "1.12"
dialoguer = "0.12"
zip = "0.6.6"
